@@ -1,5 +1,15 @@
 2012-12-12  Hani Benhabiles  <kroosec@gmail.com>
 
+	* src/gsad_omp.c (new_alert_omp, export_alert_omp, export_alerts_omp):
+	New functions.
+
+	* src/gsad_omp.h: Add headers accordingly.
+
+	* src/gsad.c (init_validator, exec_omp_get): Add new_alert, export_alert
+	and export_alerts command.
+
+2012-12-12  Hani Benhabiles  <kroosec@gmail.com>
+
 	* src/gsad_omp.c (delete_alert_omp, delete_trash_alert_omp): Use
 	delete_resource.
 	(get_alert): New function. Use get_one.
